# services

./: .gitignore  README.md  docker-compose.yml  env.yml  justfile  pyproject.toml
common/: Dockerfile.base  Dockerfile.service  docker-compose-kafka.yml  docker-compose-service-template.yml  pyproject.toml
common/microservices_common/: __init__.py  kafka.py  logging.py  utils.py
common/microservices_common/kafka/: __init__.py  aio_factory.py  client.py  config.py  factory.py  message.py  topics.py
common/microservices_common/model_definitions/: __init__.py  document.py  embeddings.py  error.py  vector_db.py
document-service/: README.md  docker-compose.yml  dockerfile  infra.yml  pyproject.toml
document-service/document_service/: main.py
embeddings-service/: .env  .env.template  docker-compose.yml  dockerfile  pyproject.toml
embeddings-service/embeddings_service/: main.py
embeddings-service/embeddings_service/embedding_models/: __init__.py  dummy.py  oai.py
orchestration-service/: docker-compose.yml  dockerfile  pyproject.toml
orchestration-service/orchestration_service/: main.py
vector-db/: docker-compose.yml  dockerfile  pyproject.toml
vector-db-service/: docker-compose.yml  dockerfile  infra.yml  pyproject.toml
vector-db-service/tests/: test_payload.json  test_search_payload.json
vector-db-service/vector_db_service/: main.py
vector-db/vector_db/: main.py
