[tool.poetry]
name = "main-project"
version = "0.1.0"
description = "Main project that imports all submodules"
authors = ["Sam Broomfield"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
microservices-common = { path = "common", develop = true }
document-service = { path = "document-service", develop = true }
embeddings-service = { path = "embeddings-service", develop = true }
vector-db-service = { path = "vector-db-service", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"