[tool.poetry]
name = "microservices-common"
version = "0.1.0"
description = "Common code for microservices"
authors = ["Sam Broomfield"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
aiokafka = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
