[tool.poetry]
name = "embeddings-service"
version = "0.1.0"
description = "Embedding service for generating embeddings from text"
authors = ["Sam Broomfield"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.40"
tiktoken = "^0.7"
microservices-common = { path = "../common" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
