[tool.poetry]
name = "orchestration-service"
version = "0.1.0"
description = "Orchestrate Services"
authors = ["Sam Broomfield"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
microservices-common = { path = "../common" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
