[tool.poetry]
name = "vector-db-service"
version = "0.1.0"
description = ""
authors = ["Sam Broomfield"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
qdrant-client = "^1.10.1"
microservices-common = { path = "../common" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
